<resources>
    <string name="app_name">Puzzle 15</string>
    <string name="title">Welcome to Game of Fifteen</string>
    <string name="music">Music</string>
    <string name="startPlay">START PLAY</string>
    <string name="t1">1</string>
    <string name="t2">2</string>
    <string name="t3">3</string>
    <string name="t4">4</string>
    <string name="t5">5</string>
    <string name="t6">6</string>
    <string name="t7">7</string>
    <string name="t8">8</string>
    <string name="t9">9</string>
    <string name="t10">10</string>
    <string name="t11">11</string>
    <string name="t12">12</string>
    <string name="t13">13</string>
    <string name="t14">14</string>
    <string name="t15">15</string>
    <string name="new_game">Start New Game</string>
    <string name="game_image">game image</string>
    <string name="music_logo">music logo</string>
    <string name="moves_0000">Moves:0000</string>
    <string name="time_00_00">Time: 00:00</string>


</resources>