<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="25sp"
        android:textColor="@color/red"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:layout_marginBottom="100dp"
        android:gravity="center"

        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/puzzle"
        android:adjustViewBounds="true"
        android:contentDescription="@string/game_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="23dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/music_icon"
            android:contentDescription="@string/music_logo" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music"
            android:layout_marginEnd="135dp"/>

        <Button
            android:id="@+id/btnPlayID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#BCB9B9"
            android:textColor="#0025F3"
            android:text="@string/startPlay" />

    </LinearLayout>



</LinearLayout>