<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".GameActivity">

<!--        android:layout_marginStart="120dp"-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/move_counter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:layout_marginEnd="100dp"
            android:text="Moves:0000" />

        <TextView
            android:id="@+id/time_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:text="Time: 00:00" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/son_layout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/btn_bck"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textSize="30sp"
                android:background="@drawable/btn_bcg"
                android:gravity="center"
                android:text="@string/t1"
                android:textColor="@color/btn_txt_clr"
                 />

            <TextView
                android:id="@+id/txt_2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/btn_bcg"
                android:gravity="center"
                android:text="@string/t2"
                android:textColor="@color/btn_txt_clr"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txt_3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/btn_bcg"
                android:gravity="center"
                android:text="@string/t3"
                android:textColor="@color/btn_txt_clr"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txt_4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/btn_bcg"
                android:gravity="center"
                android:text="@string/t4"
                android:textColor="@color/btn_txt_clr"
                android:textSize="30sp" />
        </LinearLayout>



        <LinearLayout
            android:id="@+id/son_layout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/btn_bck"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_5"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/btn_bcg"
                android:gravity="center"
                android:text="@string/t5"
                android:textColor="@color/btn_txt_clr"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txt_6"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/btn_bcg"
                android:gravity="center"
                android:text="@string/t6"
                android:textColor="@color/btn_txt_clr"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txt_7"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/btn_bcg"
                android:gravity="center"
                android:text="@string/t7"
                android:textColor="@color/btn_txt_clr"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txt_8"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/btn_bcg"
                android:textSize="30sp"
                android:gravity="center"
                android:text="@string/t8"
                android:textColor="@color/btn_txt_clr" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/btn_bck"
            android:id="@+id/son_layout3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_9"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/btn_bcg"
                android:gravity="center"
                android:text="@string/t9"
                android:textColor="@color/btn_txt_clr"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txt_10"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/btn_bcg"
                android:textSize="30sp"
                android:gravity="center"
                android:text="@string/t10"
                android:textColor="@color/btn_txt_clr" />

            <TextView
                android:id="@+id/txt_11"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/btn_bcg"
                android:textSize="30sp"
                android:gravity="center"
                android:text="@string/t11"
                android:textColor="@color/btn_txt_clr" />

            <TextView
                android:id="@+id/txt_12"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/btn_bcg"
                android:textSize="30sp"
                android:gravity="center"
                android:text="@string/t12"
                android:textColor="@color/btn_txt_clr" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/son_layout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/btn_bck"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_13"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/btn_bcg"
                android:textSize="30sp"
                android:gravity="center"
                android:text="@string/t13"
                android:textColor="@color/btn_txt_clr" />

            <TextView
                android:id="@+id/txt_14"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/btn_bcg"
                android:textSize="30sp"
                android:gravity="center"
                android:text="@string/t14"
                android:textColor="@color/btn_txt_clr" />

            <TextView
                android:id="@+id/txt_15"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/btn_bcg"
                android:textSize="30sp"
                android:gravity="center"
                android:text="@string/t15"
                android:textColor="@color/btn_txt_clr" />

            <TextView
                android:id="@+id/txt_16"
                android:layout_width="80dp"
                android:textSize="30sp"
                android:layout_height="80dp"
                android:background="@drawable/border_black_white_bcg"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/btn_txt_clr" />

        </LinearLayout>


        <Button
            android:id="@+id/btn_re_start"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/regular_btn"
            android:text="@string/new_game" />

    </LinearLayout>

</LinearLayout>